tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@multiple_extends.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/multiple_extends.txt
---
 Syntax error --> [multiple_extends.txt:2:11]
  |
2 | {% extends "b" %}
  |            ^---
  = Template is already extending `a`
